--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,9 @@
     --space-xs: 0.25rem;
     --space-sm: 0.5rem;
     --space-md: 1rem;
+    --scroll-space-md: 3rem;
     --space-lg: 1.5rem;
+    --scroll-space-lg: 3rem;
     --space-xl: 2rem;
     --scroll-space-xl: 6rem;
     --space-xxl: 3rem;
